Added U2Net and U2NetP models for background removing and AI tools

--- a/core/resources/src/main/res/values-ar/strings.xml
+++ b/core/resources/src/main/res/values-ar/strings.xml
@@ -2012,4 +2012,6 @@
     <string name="current_model_not_chunkable">النموذج الحالي لا يدعم التقطيع، ستتم معالجة الصورة بالأبعاد الأصلية، وقد يتسبب ذلك في استهلاك كبير للذاكرة ومشكلات مع الأجهزة المنخفضة الجودة</string>
     <string name="chunking_disabled">تم تعطيل التقطيع، ستتم معالجة الصورة بالأبعاد الأصلية، وقد يتسبب ذلك في استهلاك كبير للذاكرة ومشكلات مع الأجهزة المنخفضة الجودة ولكنه قد يعطي نتائج أفضل عند الاستدلال</string>
     <string name="chunking">التقطيع</string>
+    <string name="model_u2net">نموذج تجزئة الصور عالي الدقة لإزالة الخلفية</string>
+    <string name="model_u2netp">إصدار خفيف الوزن من U2Net لإزالة الخلفية بشكل أسرع مع استخدام ذاكرة أصغر.</string>
 </resources>
