--- a/core/resources/src/main/res/values-fa/strings.xml
+++ b/core/resources/src/main/res/values-fa/strings.xml
@@ -2008,4 +2008,6 @@
     <string name="current_model_not_chunkable">مدل فعلی از تکه‌شدن پشتیبانی نمی‌کند، تصویر در ابعاد اصلی پردازش می‌شود، این ممکن است باعث مصرف زیاد حافظه و مشکلات دستگاه‌های رده پایین شود.</string>
     <string name="chunking_disabled">قطعه قطعه کردن غیرفعال است، تصویر در ابعاد اصلی پردازش می‌شود، این ممکن است باعث مصرف زیاد حافظه و مشکلات دستگاه‌های ارزان‌قیمت شود، اما ممکن است نتایج بهتری در استنتاج داشته باشد.</string>
     <string name="chunking">تکه تکه شدن</string>
+    <string name="model_u2net">مدل تقسیم‌بندی تصویر با دقت بالا برای حذف پس‌زمینه</string>
+    <string name="model_u2netp">نسخه سبک U2Net برای حذف سریع پس زمینه با استفاده از حافظه کمتر.</string>
 </resources>
