--- a/core/resources/src/main/res/values-hi/strings.xml
+++ b/core/resources/src/main/res/values-hi/strings.xml
@@ -2008,4 +2008,6 @@
     <string name="current_model_not_chunkable">वर्तमान मॉडल चंकिंग का समर्थन नहीं करता है, छवि को मूल आयामों में संसाधित किया जाएगा, इससे उच्च मेमोरी खपत और लो-एंड डिवाइस के साथ समस्याएं हो सकती हैं</string>
     <string name="chunking_disabled">चंकिंग अक्षम, छवि को मूल आयामों में संसाधित किया जाएगा, इससे उच्च मेमोरी खपत और कम-अंत डिवाइसों के साथ समस्याएं हो सकती हैं लेकिन अनुमान लगाने पर बेहतर परिणाम मिल सकते हैं</string>
     <string name="chunking">ठस</string>
+    <string name="model_u2net">पृष्ठभूमि हटाने के लिए उच्च सटीकता छवि विभाजन मॉडल</string>
+    <string name="model_u2netp">कम मेमोरी उपयोग के साथ तेजी से पृष्ठभूमि हटाने के लिए U2Net का हल्का संस्करण।</string>
 </resources>
