--- a/core/resources/src/main/res/values-pa/strings.xml
+++ b/core/resources/src/main/res/values-pa/strings.xml
@@ -2008,4 +2008,6 @@
     <string name="current_model_not_chunkable">ਮੌਜੂਦਾ ਮਾਡਲ ਚੰਕਿੰਗ ਦਾ ਸਮਰਥਨ ਨਹੀਂ ਕਰਦਾ, ਚਿੱਤਰ ਨੂੰ ਅਸਲ ਮਾਪਾਂ ਵਿੱਚ ਸੰਸਾਧਿਤ ਕੀਤਾ ਜਾਵੇਗਾ, ਇਸ ਨਾਲ ਉੱਚ ਮੈਮੋਰੀ ਦੀ ਖਪਤ ਹੋ ਸਕਦੀ ਹੈ ਅਤੇ ਘੱਟ-ਅੰਤ ਵਾਲੇ ਡਿਵਾਈਸਾਂ ਨਾਲ ਸਮੱਸਿਆਵਾਂ ਹੋ ਸਕਦੀਆਂ ਹਨ</string>
     <string name="chunking_disabled">ਚੰਕਿੰਗ ਅਯੋਗ ਹੈ, ਚਿੱਤਰ ਨੂੰ ਅਸਲ ਮਾਪਾਂ ਵਿੱਚ ਸੰਸਾਧਿਤ ਕੀਤਾ ਜਾਵੇਗਾ, ਇਸ ਨਾਲ ਉੱਚ ਮੈਮੋਰੀ ਦੀ ਖਪਤ ਹੋ ਸਕਦੀ ਹੈ ਅਤੇ ਘੱਟ-ਅੰਤ ਵਾਲੇ ਡਿਵਾਈਸਾਂ ਨਾਲ ਸਮੱਸਿਆਵਾਂ ਹੋ ਸਕਦੀਆਂ ਹਨ ਪਰ ਅਨੁਮਾਨ \'ਤੇ ਵਧੀਆ ਨਤੀਜੇ ਦੇ ਸਕਦੇ ਹਨ</string>
     <string name="chunking">ਚੁੰਨੀ</string>
+    <string name="model_u2net">ਪਿਛੋਕੜ ਨੂੰ ਹਟਾਉਣ ਲਈ ਉੱਚ-ਸ਼ੁੱਧਤਾ ਚਿੱਤਰ ਵਿਭਾਜਨ ਮਾਡਲ</string>
+    <string name="model_u2netp">ਛੋਟੀ ਮੈਮੋਰੀ ਵਰਤੋਂ ਦੇ ਨਾਲ ਤੇਜ਼ ਪਿਛੋਕੜ ਨੂੰ ਹਟਾਉਣ ਲਈ U2Net ਦਾ ਹਲਕਾ ਸੰਸਕਰਣ।</string>
 </resources>
