--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2010,4 +2010,6 @@
     <string name="current_model_not_chunkable">Текущая модель не поддерживает фрагментацию, изображение будет обработано в исходных размерах, это может привести к высокому потреблению памяти и проблемам с устройствами низкого уровня.</string>
     <string name="chunking_disabled">Фрагментация отключена, изображение будет обрабатываться в исходных размерах. Это может привести к высокому потреблению памяти и проблемам с устройствами низкого уровня, но может дать лучшие результаты при выводе.</string>
     <string name="chunking">Фрагментация</string>
+    <string name="model_u2net">Высокоточная модель сегментации изображения для удаления фона</string>
+    <string name="model_u2netp">Облегченная версия U2Net для более быстрого удаления фона с меньшим использованием памяти.</string>
 </resources>
