--- a/core/resources/src/main/res/values-si/strings.xml
+++ b/core/resources/src/main/res/values-si/strings.xml
@@ -2009,4 +2009,6 @@
     <string name="current_model_not_chunkable">වත්මන් ආකෘතිය කුට්ටි කිරීමට සහය නොදක්වයි, රූපය මුල් මානයන්ගෙන් සකසනු ඇත, මෙය ඉහළ මතක පරිභෝජනයක් සහ අඩු-අන්ත උපාංග සමඟ ගැටලු ඇති කළ හැකිය</string>
     <string name="chunking_disabled">කුට්ටි කිරීම අක්‍රියයි, රූපය මුල් මානයන්ගෙන් සකසනු ඇත, මෙය ඉහළ මතක පරිභෝජනයක් සහ අඩු-අන්ත උපාංග සමඟ ගැටලු ඇති කළ හැකි නමුත් අනුමාන මත වඩා හොඳ ප්‍රතිඵල ලබා දිය හැකිය</string>
     <string name="chunking">කුට්ටි කිරීම</string>
+    <string name="model_u2net">පසුබිම ඉවත් කිරීම සඳහා ඉහළ නිරවද්‍ය රූප ඛණ්ඩන ආකෘතිය</string>
+    <string name="model_u2netp">කුඩා මතක භාවිතය සමඟ වේගවත් පසුබිම ඉවත් කිරීම සඳහා U2Net හි සැහැල්ලු අනුවාදය.</string>
 </resources>
