--- a/core/resources/src/main/res/values-ta/strings.xml
+++ b/core/resources/src/main/res/values-ta/strings.xml
@@ -2008,4 +2008,6 @@
     <string name="current_model_not_chunkable">தற்போதைய மாடல் துண்டிப்பதை ஆதரிக்காது, படம் அசல் பரிமாணங்களில் செயலாக்கப்படும், இது அதிக நினைவக நுகர்வு மற்றும் குறைந்த-இறுதி சாதனங்களில் சிக்கல்களை ஏற்படுத்தலாம்</string>
     <string name="chunking_disabled">துண்டிப்பு முடக்கப்பட்டது, படம் அசல் பரிமாணங்களில் செயலாக்கப்படும், இது அதிக நினைவக நுகர்வு மற்றும் குறைந்த-இறுதி சாதனங்களில் சிக்கல்களை ஏற்படுத்தலாம் ஆனால் அனுமானத்தில் சிறந்த முடிவுகளை அளிக்கலாம்</string>
     <string name="chunking">துண்டித்தல்</string>
+    <string name="model_u2net">பின்னணியை அகற்றுவதற்கான உயர் துல்லியமான படப் பிரிவு மாதிரி</string>
+    <string name="model_u2netp">U2Net இன் இலகுரக பதிப்பு, சிறிய நினைவகப் பயன்பாட்டுடன் வேகமான பின்னணியை அகற்றும்.</string>
 </resources>
