--- a/core/resources/src/main/res/values-te/strings.xml
+++ b/core/resources/src/main/res/values-te/strings.xml
@@ -2008,4 +2008,6 @@
     <string name="current_model_not_chunkable">ప్రస్తుత మోడల్ చంకింగ్‌కు మద్దతు ఇవ్వదు, చిత్రం అసలు కొలతలలో ప్రాసెస్ చేయబడుతుంది, ఇది అధిక మెమరీ వినియోగం మరియు తక్కువ-ముగింపు పరికరాలతో సమస్యలను కలిగిస్తుంది</string>
     <string name="chunking_disabled">చంకింగ్ డిజేబుల్ చేయబడింది, ఇమేజ్ అసలు కొలతల్లో ప్రాసెస్ చేయబడుతుంది, ఇది అధిక మెమరీ వినియోగం మరియు తక్కువ-ముగింపు పరికరాలతో సమస్యలకు కారణం కావచ్చు కానీ అనుమితిపై మెరుగైన ఫలితాలను ఇవ్వవచ్చు</string>
     <string name="chunking">చంకింగ్</string>
+    <string name="model_u2net">బ్యాక్‌గ్రౌండ్ రిమూవల్ కోసం హై-కచ్చితత్వంతో కూడిన ఇమేజ్ సెగ్మెంటేషన్ మోడల్</string>
+    <string name="model_u2netp">తక్కువ మెమరీ వినియోగంతో వేగవంతమైన నేపథ్య తొలగింపు కోసం U2Net యొక్క తేలికపాటి వెర్షన్.</string>
 </resources>
