--- a/core/resources/src/main/res/values-th/strings.xml
+++ b/core/resources/src/main/res/values-th/strings.xml
@@ -2007,4 +2007,6 @@
     <string name="current_model_not_chunkable">รุ่นปัจจุบันไม่รองรับการรวมเป็นก้อน รูปภาพจะถูกประมวลผลในขนาดดั้งเดิม ซึ่งอาจทำให้เกิดการใช้หน่วยความจำสูงและมีปัญหากับอุปกรณ์ระดับล่าง</string>
     <string name="chunking_disabled">ปิดใช้งานการแบ่งส่วน รูปภาพจะถูกประมวลผลในขนาดดั้งเดิม ซึ่งอาจทำให้ใช้หน่วยความจำสูงและมีปัญหากับอุปกรณ์ระดับล่าง แต่อาจให้ผลลัพธ์ที่ดีกว่าในการอนุมาน</string>
     <string name="chunking">ก้อน</string>
+    <string name="model_u2net">โมเดลการแบ่งส่วนภาพที่มีความแม่นยำสูงสำหรับการลบพื้นหลัง</string>
+    <string name="model_u2netp">U2Net เวอร์ชันน้ำหนักเบาเพื่อการลบพื้นหลังที่รวดเร็วขึ้นโดยใช้หน่วยความจำน้อยลง</string>
 </resources>
