--- a/core/resources/src/main/res/values-be/strings.xml
+++ b/core/resources/src/main/res/values-be/strings.xml
@@ -2010,4 +2010,6 @@
     <string name="current_model_not_chunkable">Бягучая мадэль не падтрымлівае разбіццё на кавалкі, выява будзе апрацоўвацца ў зыходных памерах, гэта можа выклікаць вялікае спажыванне памяці і праблемы з прыладамі нізкага ўзроўню</string>
     <string name="chunking_disabled">Раздзяленне на кавалкі адключана, відарыс будзе апрацоўвацца ў зыходных памерах, гэта можа выклікаць вялікае спажыванне памяці і праблемы з прыладамі нізкага класа, але можа даць лепшыя вынікі высновы</string>
     <string name="chunking">Чанкінг</string>
+    <string name="model_u2net">Высокадакладная мадэль сегментацыі выявы для выдалення фону</string>
+    <string name="model_u2netp">Палегчаная версія U2Net для больш хуткага выдалення фону з меншым выкарыстаннем памяці.</string>
 </resources>
