--- a/core/resources/src/main/res/values-bn/strings.xml
+++ b/core/resources/src/main/res/values-bn/strings.xml
@@ -2008,4 +2008,6 @@
     <string name="current_model_not_chunkable">বর্তমান মডেল চঙ্কিং সমর্থন করে না, ছবিটি মূল মাত্রায় প্রসেস করা হবে, এর ফলে উচ্চ মেমরি খরচ হতে পারে এবং লো-এন্ড ডিভাইসে সমস্যা হতে পারে</string>
     <string name="chunking_disabled">চঙ্কিং অক্ষম, ছবি মূল মাত্রায় প্রক্রিয়া করা হবে, এর ফলে উচ্চ মেমরি খরচ হতে পারে এবং লো-এন্ড ডিভাইসে সমস্যা হতে পারে তবে অনুমানে আরও ভাল ফলাফল দিতে পারে</string>
     <string name="chunking">চঙ্কিং</string>
+    <string name="model_u2net">পটভূমি অপসারণের জন্য উচ্চ-নির্ভুলতা চিত্র বিভাজন মডেল</string>
+    <string name="model_u2netp">ছোট মেমরি ব্যবহারের সাথে দ্রুত পটভূমি অপসারণের জন্য U2Net-এর হালকা সংস্করণ।</string>
 </resources>
