--- a/core/resources/src/main/res/values-et/strings.xml
+++ b/core/resources/src/main/res/values-et/strings.xml
@@ -2008,4 +2008,6 @@
     <string name="current_model_not_chunkable">Praegune mudel ei toeta tükeldamist, pilti töödeldakse originaalmõõtmetes, see võib põhjustada suurt mälutarbimist ja probleeme madala kvaliteediga seadmetega</string>
     <string name="chunking_disabled">Tükeldamine on keelatud, pilti töödeldakse esialgsetes mõõtmetes, see võib põhjustada suurt mälutarbimist ja probleeme madala kvaliteediga seadmetega, kuid võib anda paremaid järeldusi</string>
     <string name="chunking">Tükeldamine</string>
+    <string name="model_u2net">Suure täpsusega piltide segmenteerimise mudel tausta eemaldamiseks</string>
+    <string name="model_u2netp">U2Neti kerge versioon tausta kiiremaks eemaldamiseks väiksema mälukasutusega.</string>
 </resources>
