--- a/core/resources/src/main/res/values-fi/strings.xml
+++ b/core/resources/src/main/res/values-fi/strings.xml
@@ -2008,4 +2008,6 @@
     <string name="current_model_not_chunkable">Nykyinen malli ei tue paloittelua, kuva käsitellään alkuperäisissä mitoissa, mikä voi aiheuttaa suurta muistinkulutusta ja ongelmia halvempien laitteiden kanssa</string>
     <string name="chunking_disabled">Sirpalointi poistettu käytöstä, kuva käsitellään alkuperäisissä mitoissa. Tämä voi aiheuttaa suurta muistinkulutusta ja ongelmia halvempien laitteiden kanssa, mutta voi antaa parempia tuloksia pääteltäessä</string>
     <string name="chunking">Murskaavaa</string>
+    <string name="model_u2net">Erittäin tarkka kuvan segmentointimalli taustan poistamiseen</string>
+    <string name="model_u2netp">U2Netin kevyt versio nopeampaan taustan poistamiseen pienemmällä muistinkäytöllä.</string>
 </resources>
