--- a/core/resources/src/main/res/values-fr/strings.xml
+++ b/core/resources/src/main/res/values-fr/strings.xml
@@ -2008,4 +2008,6 @@
     <string name="current_model_not_chunkable">Le modèle actuel ne prend pas en charge le chunking, l\'image sera traitée dans ses dimensions d\'origine, cela peut entraîner une consommation de mémoire élevée et des problèmes avec les appareils bas de gamme.</string>
     <string name="chunking_disabled">Blocage désactivé, l\'image sera traitée dans ses dimensions d\'origine, cela peut entraîner une consommation de mémoire élevée et des problèmes avec les appareils bas de gamme, mais peut donner de meilleurs résultats d\'inférence</string>
     <string name="chunking">Morceau</string>
+    <string name="model_u2net">Modèle de segmentation d\'image de haute précision pour la suppression de l\'arrière-plan</string>
+    <string name="model_u2netp">Version allégée de U2Net pour une suppression plus rapide de l\'arrière-plan avec une utilisation moindre de la mémoire.</string>
 </resources>
