--- a/core/resources/src/main/res/values-kk/strings.xml
+++ b/core/resources/src/main/res/values-kk/strings.xml
@@ -2008,4 +2008,6 @@
     <string name="current_model_not_chunkable">Ағымдағы үлгі бөлшектеуге қолдау көрсетпейді, кескін бастапқы өлшемдерде өңделеді, бұл жадты көп тұтынуды және төмен деңгейлі құрылғылармен ақауларды тудыруы мүмкін.</string>
     <string name="chunking_disabled">Бөлшектеу өшірілген, кескін бастапқы өлшемдерде өңделеді, бұл жадты жоғары тұтынуды және төмен деңгейлі құрылғылармен ақауларды тудыруы мүмкін, бірақ қорытынды жасауда жақсы нәтижелер беруі мүмкін.</string>
     <string name="chunking">Бөлшектеу</string>
+    <string name="model_u2net">Фонды жоюға арналған жоғары дәлдіктегі кескінді сегменттеу үлгісі</string>
+    <string name="model_u2netp">Жадты азырақ пайдалану арқылы фонды жылдам жоюға арналған U2Net жеңіл нұсқасы.</string>
 </resources>
