--- a/core/resources/src/main/res/values-lt/strings.xml
+++ b/core/resources/src/main/res/values-lt/strings.xml
@@ -2011,4 +2011,6 @@
     <string name="current_model_not_chunkable">Dabartinis modelis nepalaiko smulkinimo, vaizdas bus apdorojamas originaliais matmenimis, todėl gali sunaudoti daug atminties ir kilti problemų su žemos klasės įrenginiais</string>
     <string name="chunking_disabled">Dalijimas išjungtas, vaizdas bus apdorojamas originalių matmenų, todėl gali sunaudoti daug atminties ir gali kilti problemų su žemos klasės įrenginiais, bet gali duoti geresnių išvadų rezultatų</string>
     <string name="chunking">Susmulkinti</string>
+    <string name="model_u2net">Didelio tikslumo vaizdo segmentavimo modelis, skirtas fono pašalinimui</string>
+    <string name="model_u2netp">Lengva U2Net versija, skirta greičiau pašalinti foną naudojant mažiau atminties.</string>
 </resources>
