--- a/core/resources/src/main/res/values-mr/strings.xml
+++ b/core/resources/src/main/res/values-mr/strings.xml
@@ -2009,4 +2009,6 @@
     <string name="current_model_not_chunkable">वर्तमान मॉडेल चंकिंगला समर्थन देत नाही, प्रतिमेवर मूळ परिमाणांमध्ये प्रक्रिया केली जाईल, यामुळे उच्च मेमरी वापर आणि लो-एंड उपकरणांसह समस्या उद्भवू शकतात</string>
     <string name="chunking_disabled">चंकिंग अक्षम केले आहे, प्रतिमेवर मूळ परिमाणांमध्ये प्रक्रिया केली जाईल, यामुळे उच्च मेमरी वापर आणि कमी-अंत उपकरणांसह समस्या उद्भवू शकतात परंतु अनुमानांवर चांगले परिणाम देऊ शकतात</string>
     <string name="chunking">चंकिंग</string>
+    <string name="model_u2net">पार्श्वभूमी काढण्यासाठी उच्च-अचूकता प्रतिमा विभाजन मॉडेल</string>
+    <string name="model_u2netp">लहान मेमरी वापरासह जलद पार्श्वभूमी काढण्यासाठी U2Net ची हलकी आवृत्ती.</string>
 </resources>
