--- a/core/resources/src/main/res/values-pl/strings.xml
+++ b/core/resources/src/main/res/values-pl/strings.xml
@@ -2010,4 +2010,6 @@
     <string name="current_model_not_chunkable">Obecny model nie obsługuje fragmentowania, obraz zostanie przetworzony w oryginalnych wymiarach, może to powodować duże zużycie pamięci i problemy z urządzeniami z niższej półki</string>
     <string name="chunking_disabled">Dzielenie na kawałki wyłączone, obraz zostanie przetworzony w oryginalnych wymiarach, może to powodować duże zużycie pamięci i problemy z urządzeniami z niższej półki, ale może dać lepsze wyniki na podstawie wnioskowania</string>
     <string name="chunking">Kawałki</string>
+    <string name="model_u2net">Model segmentacji obrazu o wysokiej dokładności do usuwania tła</string>
+    <string name="model_u2netp">Lekka wersja U2Net do szybszego usuwania tła przy mniejszym zużyciu pamięci.</string>
 </resources>
