--- a/core/resources/src/main/res/values-ro/strings.xml
+++ b/core/resources/src/main/res/values-ro/strings.xml
@@ -2009,4 +2009,6 @@
     <string name="current_model_not_chunkable">Modelul actual nu acceptă fragmentarea, imaginea va fi procesată la dimensiunile originale, acest lucru poate cauza un consum mare de memorie și probleme cu dispozitivele low-end</string>
     <string name="chunking_disabled">Îmbunătățirea în bucăți este dezactivată, imaginea va fi procesată la dimensiunile originale, acest lucru poate cauza un consum mare de memorie și probleme cu dispozitivele de ultimă generație, dar poate oferi rezultate mai bune la inferență</string>
     <string name="chunking">Bucățire</string>
+    <string name="model_u2net">Model de segmentare a imaginii de mare precizie pentru eliminarea fundalului</string>
+    <string name="model_u2netp">Versiune ușoară a U2Net pentru eliminarea mai rapidă a fundalului cu o utilizare mai mică a memoriei.</string>
 </resources>
