--- a/core/resources/src/main/res/values-sk/strings.xml
+++ b/core/resources/src/main/res/values-sk/strings.xml
@@ -2010,4 +2010,6 @@
     <string name="current_model_not_chunkable">Aktuálny model nepodporuje chunking, obraz bude spracovaný v pôvodných rozmeroch, čo môže spôsobiť vysokú spotrebu pamäte a problémy s low-end zariadeniami</string>
     <string name="chunking_disabled">Chunking deaktivovaný, obrázok bude spracovaný v pôvodných rozmeroch, čo môže spôsobiť vysokú spotrebu pamäte a problémy s lacnejšími zariadeniami, ale môže poskytnúť lepšie výsledky pri odvodzovaní</string>
     <string name="chunking">Chunking</string>
+    <string name="model_u2net">Vysoko presný model segmentácie obrazu na odstránenie pozadia</string>
+    <string name="model_u2netp">Odľahčená verzia U2Net pre rýchlejšie odstraňovanie pozadia s menšou spotrebou pamäte.</string>
 </resources>
