--- a/core/resources/src/main/res/values-sr/strings.xml
+++ b/core/resources/src/main/res/values-sr/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="restart_app">Restart app</string>
     <string name="about_app">About app</string>
     <string name="no_updates">No poboljšati pronađen</string>
@@ -2007,4 +2009,6 @@
     <string name="current_model_not_chunkable">Тренутни модел не подржава ломљење, слика ће бити обрађена у оригиналним димензијама, што може узроковати велику потрошњу меморије и проблеме са уређајима ниске класе</string>
     <string name="chunking_disabled">Резање на комаде је онемогућено, слика ће бити обрађена у оригиналним димензијама, ово може узроковати велику потрошњу меморије и проблеме са нижим уређајима, али може дати боље резултате при закључивању</string>
     <string name="chunking">Цхункинг</string>
+    <string name="model_u2net">Модел сегментације слике високе прецизности за уклањање позадине</string>
+    <string name="model_u2netp">Лагана верзија У2Нета за брже уклањање позадине уз мању употребу меморије.</string>
 </resources>
