--- a/core/resources/src/main/res/values-tr/strings.xml
+++ b/core/resources/src/main/res/values-tr/strings.xml
@@ -2008,4 +2008,6 @@
     <string name="current_model_not_chunkable">Mevcut model parçalamayı desteklemiyor, görüntü orijinal boyutlarda işlenecek, bu durum yüksek bellek tüketimine ve düşük kaliteli cihazlarda sorunlara neden olabilir</string>
     <string name="chunking_disabled">Parçalama devre dışı, görüntü orijinal boyutlarında işlenecek; bu, yüksek bellek tüketimine ve düşük kaliteli cihazlarda sorunlara neden olabilir ancak çıkarımda daha iyi sonuçlar verebilir</string>
     <string name="chunking">Parçalama</string>
+    <string name="model_u2net">Arka planı kaldırmak için yüksek doğruluklu görüntü segmentasyon modeli</string>
+    <string name="model_u2netp">Daha az bellek kullanımıyla daha hızlı arka plan kaldırma için U2Net\'in hafif versiyonu.</string>
 </resources>
