--- a/core/resources/src/main/res/values-uk/strings.xml
+++ b/core/resources/src/main/res/values-uk/strings.xml
@@ -2010,4 +2010,6 @@
     <string name="current_model_not_chunkable">Поточна модель не підтримує фрагментування, зображення буде оброблено в оригінальних розмірах, це може спричинити велике споживання пам’яті та проблеми з пристроями низького класу</string>
     <string name="chunking_disabled">Розбиття на фрагменти вимкнено, зображення буде оброблено в оригінальних розмірах, це може спричинити велике споживання пам’яті та проблеми з пристроями низького класу, але може дати кращі результати під час висновку</string>
     <string name="chunking">Чанкінг</string>
+    <string name="model_u2net">Високоточна модель сегментації зображення для видалення фону</string>
+    <string name="model_u2netp">Полегшена версія U2Net для швидшого видалення фону з меншим використанням пам’яті.</string>
 </resources>
